Vertex and fragment shaders implemented, orange triangle now displays in the window

--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Boilerplate\Input.cpp" />
+    <ClCompile Include="src\Boilerplate\Renderer.cpp" />
     <ClCompile Include="src\Boilerplate\Window.cpp" />
     <ClCompile Include="src\Boilerplate\glad.c" />
     <ClCompile Include="src\main.cpp" />
@@ -161,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Boilerplate\Input.h" />
+    <ClInclude Include="src\Boilerplate\Renderer.h" />
     <ClInclude Include="src\Boilerplate\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
