Added Timer Class
Keeps track of Delta Time and FPS (Frames Per Second). Implements a singleton class structure to ensure only one instance of Timer can exist, helping to ensure time-sensitive operations are always synchronized.

main.cpp grabs a pointer to the singleton instance, then each frame updates Delta Time and FPS.

--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <ClInclude Include="src\Boilerplate\Shader.h" />
     <ClInclude Include="src\Boilerplate\Input.h" />
+    <ClInclude Include="src\Boilerplate\Timer.h" />
     <ClInclude Include="src\Boilerplate\Window.h" />
   </ItemGroup>
   <ItemGroup>
