--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -68,7 +68,7 @@
     <Image Include="src\Textures\container.jpg">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="src\Textures\awesomeface.png">
+    <Image Include="src\Textures\nice.jpg">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
