--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="src\Boilerplate\Window.cpp" />
     <ClCompile Include="src\Boilerplate\glad.c" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\PhysicsSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
@@ -169,6 +170,10 @@
     <ClInclude Include="src\Boilerplate\Input.h" />
     <ClInclude Include="src\Boilerplate\Timer.h" />
     <ClInclude Include="src\Boilerplate\Window.h" />
+    <ClInclude Include="src\Entity.h" />
+    <ClInclude Include="src\Model.h" />
+    <ClInclude Include="src\PhysicsSystem.h" />
+    <ClInclude Include="src\Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\Boilerplate\shaderFragment.txt" />
