--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -175,11 +175,11 @@
     <Text Include="src\Boilerplate\shaderVertex.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\Textures\container.jpg" />
-    <Image Include="src\Textures\nice.jpg" />
+    <Image Include="assets\textures\container.jpg" />
+    <Image Include="assets\textures\nice.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Font Include="src\Fonts\arial.ttf" />
+    <Font Include="assets\fonts\arial.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="libraries\freetype-2.12.1\objs\freetype.lib" />
