Moved Test Cube Definition Out of Main
Now it lives in Cube.h, just a simple cleanup job.

--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -163,6 +163,7 @@
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Boilerplate\Cube.h" />
     <ClInclude Include="src\Boilerplate\Texture.h" />
     <ClInclude Include="src\Boilerplate\stb_image.h" />
     <ClInclude Include="src\Boilerplate\Shader.h" />
