--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Boilerplate\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Boilerplate\Text.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
@@ -62,10 +65,9 @@
     <ClInclude Include="src\Boilerplate\Cube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="src\Boilerplate\shaderFragment.txt" />
-    <Text Include="src\Boilerplate\shaderVertex.txt" />
+    <ClInclude Include="src\Boilerplate\Text.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\container.jpg">
@@ -80,5 +82,11 @@
   </ItemGroup>
   <ItemGroup>
     <Library Include="libraries\freetype-2.12.1\objs\freetype.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\Boilerplate\shaderBasicFragment.txt" />
+    <Text Include="src\Boilerplate\shaderBasicVertex.txt" />
+    <Text Include="src\Boilerplate\shaderTextFragment.txt" />
+    <Text Include="src\Boilerplate\shaderTextVertex.txt" />
   </ItemGroup>
 </Project>
