--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -121,7 +121,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(SolutionDir)libraries\assimp\include;$(SolutionDir)src;$(SolutionDir)libraries\glm;$(SolutionDir)libraries\opengl\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)libraries\physx\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)libraries\assimp\include;$(SolutionDir)src;$(SolutionDir)libraries\glm;$(SolutionDir)libraries\opengl\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)libraries\physx\include;$(SolutionDir)\libraries\imgui-1.89.2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -138,7 +138,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)libraries\assimp\include;$(SolutionDir)src;$(SolutionDir)libraries\glm;$(SolutionDir)libraries\opengl\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)libraries\physx\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)libraries\assimp\include;$(SolutionDir)src;$(SolutionDir)libraries\glm;$(SolutionDir)libraries\opengl\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)libraries\physx\include;$(SolutionDir)libraries\imgui-1.89.2%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -151,6 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="libraries\imgui-1.89.2\imgui.cpp" />
+    <ClCompile Include="libraries\imgui-1.89.2\imgui_demo.cpp" />
+    <ClCompile Include="libraries\imgui-1.89.2\imgui_draw.cpp" />
+    <ClCompile Include="libraries\imgui-1.89.2\imgui_impl_glfw.cpp" />
+    <ClCompile Include="libraries\imgui-1.89.2\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="libraries\imgui-1.89.2\imgui_tables.cpp" />
+    <ClCompile Include="libraries\imgui-1.89.2\imgui_widgets.cpp" />
     <ClCompile Include="src\Boilerplate\Input.cpp" />
     <ClCompile Include="src\Boilerplate\Mesh.cpp" />
     <ClCompile Include="src\Boilerplate\Shader.cpp" />
@@ -159,6 +166,13 @@
     <ClCompile Include="src\Boilerplate\stb_image.cpp" />
     <ClCompile Include="src\Boilerplate\Window.cpp" />
     <ClCompile Include="src\Boilerplate\glad.c" />
+    <ClCompile Include="src\imgui\imgui.cpp" />
+    <ClCompile Include="src\imgui\imgui_demo.cpp" />
+    <ClCompile Include="src\imgui\imgui_draw.cpp" />
+    <ClCompile Include="src\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="src\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="src\imgui\imgui_tables.cpp" />
+    <ClCompile Include="src\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\PhysicsSystem.cpp" />
     <ClCompile Include="src\RenderingSystem.cpp" />
@@ -167,6 +181,15 @@
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="libraries\imgui-1.89.2\imconfig.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imgui.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imgui_impl_glfw.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imgui_impl_opengl3.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imgui_internal.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imstb_rectpack.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imstb_textedit.h" />
+    <ClInclude Include="libraries\imgui-1.89.2\imstb_truetype.h" />
     <ClInclude Include="src\Boilerplate\Cube.h" />
     <ClInclude Include="src\Boilerplate\Mesh.h" />
     <ClInclude Include="src\Boilerplate\Model.h" />
@@ -178,6 +201,15 @@
     <ClInclude Include="src\Boilerplate\Timer.h" />
     <ClInclude Include="src\Boilerplate\Window.h" />
     <ClInclude Include="src\Entity.h" />
+    <ClInclude Include="src\imgui\imconfig.h" />
+    <ClInclude Include="src\imgui\imgui.h" />
+    <ClInclude Include="src\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="src\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="src\imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="src\imgui\imgui_internal.h" />
+    <ClInclude Include="src\imgui\imstb_rectpack.h" />
+    <ClInclude Include="src\imgui\imstb_textedit.h" />
+    <ClInclude Include="src\imgui\imstb_truetype.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\PhysicsSystem.h" />
     <ClInclude Include="src\RenderingSystem.h" />
