cel shader parameters adjustable

--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -230,6 +230,10 @@
     <Text Include="src\Boilerplate\shaderBasicVertex.txt" />
     <Text Include="src\Boilerplate\shaderTextFragment.txt" />
     <Text Include="src\Boilerplate\shaderTextVertex.txt" />
+    <Text Include="src\Cel Shader\shaderCelFragment.txt" />
+    <Text Include="src\Cel Shader\shaderCelVertex.txt" />
+    <Text Include="src\Cel Shader\shaderOutlineFragment.txt" />
+    <Text Include="src\Cel Shader\shaderOutlineVertex.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
