--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -86,10 +86,14 @@
     </ClCompile>
     <ClCompile Include="src\imgui\imgui_widgets.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile><ClCompile Include="src\testInput.cpp">
+    </ClCompile>
+    <ClCompile Include="src\testInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-</ItemGroup>
+    <ClCompile Include="src\Boilerplate\Shadow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
   </ItemGroup>
@@ -190,6 +194,9 @@
     <ClInclude Include="src\imgui\imstb_textedit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Boilerplate\Shadow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\container.jpg">
@@ -208,8 +215,6 @@
   <ItemGroup>
     <Text Include="src\Boilerplate\shaderBasicFragment.txt" />
     <Text Include="src\Boilerplate\shaderBasicVertex.txt" />
-    <Text Include="src\Boilerplate\shaderTextFragment.txt" />
-    <Text Include="src\Boilerplate\shaderTextVertex.txt" />
     <Text Include="src\Cel Shader\shaderCelFragment.txt" />
     <Text Include="src\Cel Shader\shaderCelVertex.txt" />
     <Text Include="src\Cel Shader\shaderOutlineFragment.txt" />
