--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -151,6 +151,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="snippetvehicle2common\base\Base.cpp" />
+    <ClCompile Include="snippetvehicle2common\directdrivetrain\DirectDrivetrain.cpp" />
+    <ClCompile Include="snippetvehicle2common\enginedrivetrain\EngineDrivetrain.cpp" />
+    <ClCompile Include="snippetvehicle2common\physxintegration\PhysXIntegration.cpp" />
+    <ClCompile Include="snippetvehicle2common\serialization\BaseSerialization.cpp" />
+    <ClCompile Include="snippetvehicle2common\serialization\DirectDrivetrainSerialization.cpp" />
+    <ClCompile Include="snippetvehicle2common\serialization\EngineDrivetrainSerialization.cpp" />
+    <ClCompile Include="snippetvehicle2common\serialization\SerializationCommon.cpp" />
+    <ClCompile Include="snippetvehicle2common\SnippetVehicleHelpers.cpp" />
     <ClCompile Include="src\Boilerplate\Mesh.cpp" />
     <ClCompile Include="src\Boilerplate\Shader.cpp" />
     <ClCompile Include="src\Boilerplate\Text.cpp" />
@@ -167,6 +176,17 @@
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="snippetcommon\SnippetPrint.h" />
+    <ClInclude Include="snippetcommon\SnippetPVD.h" />
+    <ClInclude Include="snippetvehicle2common\base\Base.h" />
+    <ClInclude Include="snippetvehicle2common\directdrivetrain\DirectDrivetrain.h" />
+    <ClInclude Include="snippetvehicle2common\enginedrivetrain\EngineDrivetrain.h" />
+    <ClInclude Include="snippetvehicle2common\physxintegration\PhysXIntegration.h" />
+    <ClInclude Include="snippetvehicle2common\serialization\BaseSerialization.h" />
+    <ClInclude Include="snippetvehicle2common\serialization\DirectDrivetrainSerialization.h" />
+    <ClInclude Include="snippetvehicle2common\serialization\EngineDrivetrainSerialization.h" />
+    <ClInclude Include="snippetvehicle2common\serialization\SerializationCommon.h" />
+    <ClInclude Include="snippetvehicle2common\SnippetVehicleHelpers.h" />
     <ClInclude Include="src\Boilerplate\Cube.h" />
     <ClInclude Include="src\Boilerplate\Mesh.h" />
     <ClInclude Include="src\Boilerplate\Model.h" />
