--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -1451,6 +1451,9 @@
     <ClInclude Include="libraries\physx\include\PxVisualizationParameter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\OBJ_Loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\container.jpg">
