Added 6 Wheels + IMGUI Sliders for Camera
The vehicle now has 6 wheels and looks somewhat believeable! The back 4 wheels all act the same, with the front 2 steering and all 6 driving.

I also added some IMGUI sliders for the camera parameters to make them easier to tweak.

--- a/585Game/imgui.ini
+++ b/585Game/imgui.ini
@@ -9,7 +9,12 @@ Size=246,113
 Collapsed=0
 
 [Window][Super Space Salvagers]
-Pos=1901,1019
-Size=428,256
+Pos=1450,620
+Size=483,256
+Collapsed=0
+
+[Window][Super Space Salvagers - Debug]
+Pos=60,60
+Size=534,484
 Collapsed=0
 
